Added the headlines and fixed the selected option work;

--- a/dailyaiapp/templates/home.html
+++ b/dailyaiapp/templates/home.html
@@ -27,7 +27,7 @@
       </div>  
     </div>
 
-    <div class="container">
+<!--     <div class="container">
       <div class="row">
         <div class="col-md-4">
           <h2>Simple</h2>
@@ -43,7 +43,7 @@
           </form>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="container">
       <h2>Consult Your Favorite Headlines</h2>
             <form> Choose publisher: 
