--- a/dailyaiapp/templates/home.html
+++ b/dailyaiapp/templates/home.html
@@ -66,7 +66,8 @@
                     </td>
                     <td><input type="submit" value="Get Content" class="form-control"></td>
                     <input type="text" name="article_link" value="{{article.link}}" hidden>
-                    <input type="text" name="title" value="{{article.title}}" hidden>  
+                    <input type="text" name="title" value="{{article.title}}" hidden> 
+                    <input type="text" name="pub_to_display" value="{{pub_display}}" hidden>  
                   </tr>
                 </form>
                 <br />
