generate summary for bbc and financial post

--- a/dailyaiapp/templates/article_text.html
+++ b/dailyaiapp/templates/article_text.html
@@ -22,7 +22,7 @@
 {% block content %}
     <div class="jumbotron">
       <div class="container">
-        <h1>Daily AI</h1>
+        <h1>Quick News</h1>
         <p>Explore the Power of Math in Your Everyday Life</p>
       </div>  
     </div>
@@ -38,10 +38,10 @@
       <br />
       <br />
       <br />
-      {% if True %}
+      <!-- {% if True %}
           {% for textline in article_content %}
               <p>{{ textline }}</p>
           {% endfor %}
-      {% endif %}
+      {% endif %} -->
     </div>
 {% endblock %}
